Add icon,testes de cores.

--- a/Prototipo 1/siteGPTcode/style.css
+++ b/Prototipo 1/siteGPTcode/style.css
@@ -26,7 +26,8 @@ section {
 }
 
 h2 {
-    color: #343a40; /* Cor escura para os títulos */
+    color: #EEB831
+; /* Cor escura para os títulos */
     margin-bottom: 3rem;
     font-weight: 700;
 }
